<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_pensamiento"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:padding="8dp">

    <TextView
        android:id="@+id/label_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_titulo"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:text="@string/label_descripcion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/label_categoria"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_titulo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/label_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_categoria"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_fecha" />

    <TextView
        android:id="@+id/label_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/label_titulo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>